--- a/mealbb.html
+++ b/mealbb.html
@@ -9,11 +9,18 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+<style>
+    .pointer{
+       cursor: pointer;
+    }
+</style>
 </head>
 
 <body class="bg-info">
     <h1 class="text-center text-danger">more meal db naki bl</h1>
+    <section id="details" class=" my-5 ">
+       
+    </section>
 
     <div class="input-group mb-3 w-50 m-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search Your liked foods"
@@ -28,7 +35,6 @@
         <div id="search-meals" class="row row-cols-1 row-cols-md-3 g-4">
           </div>
     </div>
-
 
     <script src="js/mealdb.js"></script>
 </body>
